Fixed header layout issues

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,48 +2,41 @@
     font-family: $font-family;
 }
 
-
-.wrap {
-    max-width: $content-max-width;
-    margin: 0 auto;
-    padding-bottom: 60px;
-    position: relative;
-}
 #site-header {
+    z-index: 999;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #fff;
 
-    &.sticky {
-        z-index: 999;
-        position: fixed;
-        top: 0;
-        width: 100%;
-        background-color: #fff;
+    &.sticky {    
         border-bottom: solid 1px $border-color-light;
     }
 
     .logo {
         float: left;
-        padding: 6px;
+        padding: 6px 12px 6px 0;
+        margin-top: -8px;
 
         img {
-            height: 64px;
-            width: 64px;
+            height: 52px;
+            width: 52px;
             border: 0;
         }
-        
     }
 
-
-
     h1 {
-        font-size: 1.8em;
+        font-size: 1.6em;
+        font-weight: 700;
+        text-indent: -1px;
         margin: 0;
-        font-weight: bold;
     }
 
     h2 {
-        font-size: 1.1em;
-        margin: 0;
+        font-size: 1em;
         line-height: 1em;
+        text-indent: -1px;
+        margin: 0;
     }
 
     .site-head-content {
@@ -57,6 +50,14 @@
         display: inline-block;
     }
 
+}
+
+#content {
+    max-width: $content-max-width;
+    margin: 0 auto;
+    padding-top: 100px;
+    padding-bottom: 60px;
+    position: relative;
 }
 
 /*
